# rpc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/rpc-codec-json/: Cargo.toml
crates/rpc-codec-json/src/: lib.rs
crates/rpc-codec-msgpack/: Cargo.toml
crates/rpc-codec-msgpack/src/: lib.rs
crates/rpc-core/: Cargo.toml
crates/rpc-core/src/: error.rs  lib.rs
crates/rpc-macro/: Cargo.toml
crates/rpc-macro/src/: lib.rs
crates/rpc-macro/tests/: dynamic_client.rs  local_types.rs  streaming_dyn_client.rs
crates/rpc-openapi/: Cargo.toml
crates/rpc-openapi/src/: lib.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: lib.rs
crates/rpc-transport-http/: Cargo.toml
crates/rpc-transport-http/src/: lib.rs
crates/rpc-transport-inprocess/: Cargo.toml
crates/rpc-transport-inprocess/src/: lib.rs
crates/rpc-transport-stdio/: Cargo.toml
crates/rpc-transport-stdio/src/: lib.rs
crates/rpc-transport-ws/: Cargo.toml
crates/rpc-transport-ws/src/: lib.rs
crates/rpc-wasm-runtime/: Cargo.toml
crates/rpc-wasm-runtime/src/: lib.rs
crates/rpc-wasm-runtime/tests/: wasm_kernel_test.rs
examples-crate/: Cargo.toml
examples-crate/examples/: basic_websocket.rs  bidirectional.rs  codec_mixing.rs  custom_types.rs  http_bidirectional.rs  inprocess.rs  openapi_gen.rs  stdio_embedded.rs  streaming.rs  wit_gen.rs
examples-crate/src/: lib.rs
examples/wasm-kernel/: server.rs
tests/wasm-kernel/: counter.wit
tests/wasm-kernel/guest/: Cargo.toml
tests/wasm-kernel/guest/src/: lib.rs
