[workspace]
resolver = "2"
members = [
    "crates/rpc-core",
    "crates/rpc-macro",
    "crates/rpc-codec-json",
    "crates/rpc-codec-msgpack",
    "crates/rpc-transport-ws",
    "crates/rpc-transport-stdio",
    "crates/rpc-transport-inprocess",
    "crates/rpc-server",
    "crates/rpc-openapi",
    "crates/rpc-wasm-runtime",
    "examples-crate",
]
exclude = [
    "tests/wasm-kernel/guest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Andrew Gazelka"]
repository = "https://github.com/andrewgazelka/rpc"

[workspace.dependencies]
# Core dependencies
thiserror = "2.0"
futures = "0.3"
blake3 = "1.5"
lru = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Schema
schema = { git = "https://github.com/andrewgazelka/schema" }
schema-openapi = { git = "https://github.com/andrewgazelka/schema" }
schema-wit = { git = "https://github.com/andrewgazelka/schema" }

# WebSocket
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"

# Macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Internal workspace crates
rpc-core = { path = "crates/rpc-core" }
rpc-macro = { path = "crates/rpc-macro" }
rpc-codec-json = { path = "crates/rpc-codec-json" }
rpc-codec-msgpack = { path = "crates/rpc-codec-msgpack" }
rpc-transport-ws = { path = "crates/rpc-transport-ws" }
rpc-transport-stdio = { path = "crates/rpc-transport-stdio" }
rpc-transport-inprocess = { path = "crates/rpc-transport-inprocess" }
rpc-server = { path = "crates/rpc-server" }
rpc-openapi = { path = "crates/rpc-openapi" }
rpc-wasm-runtime = { path = "crates/rpc-wasm-runtime" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
