[package]
name = "rpc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
futures.workspace = true

[dev-dependencies]
serde_json.workspace = true
