[package]
name = "rpc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
futures.workspace = true
schema.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
