[package]
name = "rpc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rpc-core.workspace = true
rpc-macro.workspace = true

[dev-dependencies]
tokio.workspace = true
rpc-codec-json.workspace = true
rpc-codec-msgpack.workspace = true
rpc-transport-ws.workspace = true
schema.workspace = true
schema-openapi.workspace = true
serde_json.workspace = true
