[package]
name = "rpc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rpc-core.workspace = true
rpc-macro.workspace = true
futures.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "rpc-core/tracing", "rpc-macro/tracing"]
wit = ["rpc-macro/wit"]
openapi = ["rpc-macro/openapi"]

[dev-dependencies]
tokio.workspace = true
rpc-codec-json.workspace = true
rpc-codec-msgpack.workspace = true
rpc-transport-ws.workspace = true
schema.workspace = true
schema-openapi.workspace = true
schema-wit.workspace = true
serde_json.workspace = true
tracing.workspace = true
