[package]
name = "rpc-transport-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rpc-core.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
rpc-codec-json.workspace = true
