[package]
name = "rpc-wasm-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rpc-core.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
blake3.workspace = true
lru.workspace = true

# Wasmtime dependencies
wasmtime = { version = "28.0", features = ["component-model", "async"] }
wasmtime-wasi = "28.0"

[dev-dependencies]
serde_json.workspace = true
rpc-server.workspace = true
rpc-codec-json.workspace = true
rpc-transport-inprocess.workspace = true
schema.workspace = true
schema-openapi.workspace = true
schema-wit.workspace = true
async-trait = "0.1"
tracing.workspace = true
